--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,7 +1,5 @@
-header {
+/* header {
     background: url("../img/header.jpg");
     size: cover;
     filter: brightness(50%);
-    
-    
-}
+} */
