--- a/css/contact.css
+++ b/css/contact.css
@@ -7,7 +7,21 @@
     margin-left: 13em;
 }
 
-.mapouter {
-   margin-left: 8em;
-   margin-bottom: 4em;
+.map-responsive {
+    overflow:hidden;
+    padding-bottom:56.25%;
+    position:relative;
+    height:0;
+}
+    
+.map-responsive iframe {
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+    position:absolute;
+}
+
+body {
+    width: 100%;
 }
